{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 9,
  "lineage": "b9804e7f-dbfd-2302-efaa-22b9bdd72077",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665416441750:security-group/sg-0241371c1680dfcb9",
            "description": "Security group for EKS cluster my_new_kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0241371c1680dfcb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-cluster-sg-my_new_kubernetes",
            "name_prefix": "",
            "owner_id": "665416441750",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg-my_new_kubernetes"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-my_new_kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e1434497448ec4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665416441750",
            "id": "sg-0241371c1680dfcb9",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665416441750:security-group/sg-07b5122a45084f998",
            "description": "Security group for EKS worker nodes my_new_kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b5122a45084f998",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-worker-sg-my_new_kubernetes",
            "name_prefix": "",
            "owner_id": "665416441750",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-sg-my_new_kubernetes"
            },
            "tags_all": {
              "Name": "eks-worker-sg-my_new_kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-089e1434497448ec4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665416441750",
            "id": "sg-07b5122a45084f998",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665416441750:vpc/vpc-09e7e08e0195efa84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0b57aa704a6fb9ac9",
            "default_route_table_id": "rtb-0497215a053409516",
            "default_security_group_id": "sg-07efcbc68302bb631",
            "dhcp_options_id": "dopt-0921f208ec5b3774f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e7e08e0195efa84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0497215a053409516",
            "owner_id": "665416441750",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665416441750",
            "id": "vpc-09e7e08e0195efa84",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}